# tonic-mlir

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  combined.cpp  requirements.txt  setup_env.bat
include/Dialect/Tonic/: Passes.h  TonicDialect.h  TonicOps.h
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/TonicToLinalg/: CMakeLists.txt  TonicToLinalg.cpp
lib/Dialect/Tonic/: CMakeLists.txt  Passes.td  TonicDialect.cpp  TonicDialect.td  TonicOps.td
models/mlp-iris/: iris_not_trained.onnx  mlp_iris_model.py
models/mlp-mnist/: mlp_mnist_model.py  mlp_mnist_not_trained.onnx  mlp_mnist_not_trained.onnx.data
patches/: MemRefToEmitC-conversion-index-to-sizet.patch
tests/: test_flatten_lowering.mlir  test_flatten_minimal.mlir  test_gemm_lowering.mlir  test_real_relu_lowering.mlir  test_relu_lowering.mlir  test_relu_syntax.mlir  test_softmax_lowering.mlir
tools/: CMakeLists.txt  tonic-opt.cpp
